PostgreSQL database implementation